generated/checkers/gen/AllGen-Null-Pointer-Dereference-b1ba8bcb2d1ffce11b308ce166c9cc28d989e3b9/build_logs/syntax-repair-02/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:109:62: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  109 |       if (const Stmt *Orig = State->get<OptionalRetSymOrigin>(RHSym)) {
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
      |                                                              |
      |                                                              clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:123:66: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  123 |           if (const Stmt *Orig = State->get<OptionalRegionOrigin>(SrcR))
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                                  |
      |                                                                  clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportUncheckedDeref(const clang::Stmt*, const clang::ento::MemRegion*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:215:62: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  215 |     if (const Stmt *Origin = State->get<OptionalRegionOrigin>(BaseReg)) {
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
      |                                                              |
      |                                                              clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:217:83: error: cannot convert ‘const clang::SourceManager’ to ‘llvm::ArrayRef<clang::SourceRange>’
  217 |       Rpt->addNote("Optional getter can return NULL here", Loc, C.getSourceManager());
      |                                                                 ~~~~~~~~~~~~~~~~~~^~
      |                                                                                   |
      |                                                                                   const clang::SourceManager
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:202:38: note:   initializing argument 3 of ‘void clang::ento::BugReport::addNote(llvm::StringRef, const clang::ento::PathDiagnosticLocation&, llvm::ArrayRef<clang::SourceRange>)’
  202 |                ArrayRef<SourceRange> Ranges = {}) {
      |                ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
